tests/ui/fallback/multiple-fallbacks.stderr
error: only one enum variant may be `#[fallback]`
 --> tests/ui/fallback/multiple-fallbacks.rs:4:10
  |
4 | #[derive(FromBits)]
  |          ^^^^^^^^
  |
  = help: remove #[fallback] attributes until you only have one
  = note: this error originates in the derive macro `FromBits` (in Nightly builds, run with -Z macro-backtrace for more info)
